--- a/teste-examen-isf-SECURE-V5.html
+++ b/teste-examen-isf-SECURE-V5.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Teste Pregătire Online – Examen ISF 2025</title>
+<title>Teste Pregătire Online – Examen ISF</title>
 <style>
 body {
   font-family: 'Roboto', Arial, sans-serif;
